--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: DIGID
+Theme Name: dig.id
 Theme URI: https://wordpress.org/themes/twentytwenty/
 Author: dig.id
 Author URI: https://dig.id/
