--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -1,8 +1,17 @@
+#main-header
+  .navbar
+    .site-branding
+      .site-logo
+        svg
+          max-width: 40px
+          height: auto
+          fill: $text-color
+  
 #main-nav
-    .menu-item
-        a
-            font-family: $main-font
-            font-size: 16px
-            color: $text-color
-            padding: 0 10px
-            text-decoration: none
+  .menu-item
+    a
+      font-family: $main-font
+      font-size: 16px
+      color: $text-color
+      padding: 0 10px
+      text-decoration: none
