--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -20,10 +20,20 @@
       font-weight: 300
       color: #445659
       text-decoration: none
+      &:hover
+        color: #DEE3E4
+  &__light
+    .menu-item
+      .nav-link
+        color: #445659
+        &:hover
+          color: #DEE3E4
   &__dark
     .menu-item
       .nav-link
         color: #DEE3E4
+        &:hover
+          color: #445659
 
 @include media-breakpoint-up(lg)
   #main-header
@@ -55,20 +65,28 @@
     .navbar
       padding-top: 25px
       padding-bottom: 30px
-      background-color: #fff
+      background-color: $bg-color
       box-shadow: 0px -1px 4px 0px rgb(0 0 0 / 20%)
       .site-branding
         .site-logo
           path
             fill: $main-color !important
+      .nav-link
+          color: #445659
+          &:hover
+            color: $main-color
       &__light
         background-color: $dark-color
         .nav-link
           color: #DEE3E4
+          &:hover
+            color: $main-color
       &__dark
         background-color: $bg-color
         .nav-link
           color: #445659
+          &:hover
+            color: $main-color
       .navbar-actions
         .navbar-toggler
           .icon-left,
