--- a/assets/sass/_layout/_homepage.sass
+++ b/assets/sass/_layout/_homepage.sass
@@ -33,3 +33,7 @@
 .section-blog
   padding-top: 100px
   padding-bottom: 100px
+  .section__subtitle
+    margin-bottom: 0
+    &--wrapper
+      margin-bottom: 60px
