--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -40,12 +40,19 @@
 
 .card-post
   margin-bottom: 40px
-  img
-    max-width: 100%
-    width: 100%
-    height: auto
-    object-fit: cover
+  figure
     margin-bottom: 20px
+    overflow: hidden
+    img
+      max-width: 100%
+      width: 100%
+      height: auto
+      object-fit: cover
+      transform: scale(1)
+      transition: all .3s ease-in
+    &:hover
+      img
+        transform: scale(1.1)
 
   &__title
     text-decoration: none
