--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -15,6 +15,7 @@
     &--wrapper
       margin-bottom: 20px
   &__subtitle
+    font-family: $second-font
     font-size: 39.82px
     font-weight: 400
     line-height: 64px
