--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -22,8 +22,7 @@
     line-height: 25px
     margin-bottom: 40px
     color: #496063
-    
-    // Addition lines for 3 line or multiline ellipsis
+    // Addition lines for 4 line or multiline ellipsis
     text-overflow: ellipsis
     overflow: hidden
     display: -webkit-box !important
@@ -92,9 +91,9 @@
         display: inline-block
         font-family: $main-font
         font-size: 12px
+        font-weight: 300
         letter-spacing: 0.36px
-        line-height: 30px
-        margin-bottom: 30px
+        line-height: 25px
         color: #496063
 
 
