--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -90,10 +90,11 @@
       li
         display: inline-block
         font-family: $main-font
-        font-size: 12px
+        font-size: 14px
         font-weight: 300
         letter-spacing: 0.36px
         line-height: 25px
+        margin-right: 3px
         color: #496063
 
 
