--- a/assets/sass/_layout/_homepage.sass
+++ b/assets/sass/_layout/_homepage.sass
@@ -1,3 +1,20 @@
+
+
+/* text animation */
+@keyframes animated-text
+  from
+    width: 0
+  to
+    width: 480px
+
+/* cursor animations */
+@keyframes animated-cursor
+  from
+    border-bottom-color: rgba(0,255,0,.75)
+  to
+    border-bottom-color: transparent
+
+
 .section-hero
   display: flex
   justify-content: center
@@ -11,8 +28,13 @@
     line-height: 71px
     color: $text-color
     span
-      color: $bg-color
-      margin-left: 30%
+      &:nth-child(1)
+        color: $bg-color
+        margin-left: 30%
+
+
+
+
 
 .section-intro
   padding-top: 140px
