--- a/assets/sass/_layout/_footer.sass
+++ b/assets/sass/_layout/_footer.sass
@@ -3,7 +3,7 @@
     font-size: 16px
     letter-spacing: 0.7998px
     text-transform: uppercase
-    margin-bottom: 30px
+    margin-bottom: 25px
     color: $bg-color
   .footer-left
     padding-top: 75px
@@ -29,13 +29,59 @@
       p
         font-size: 14px
         letter-spacing: 0.36px
+    .socials-wrapper
+      display: flex
+      flex-direction: column
+      margin-bottom: 80px
+      a
+        display: inline-block
+        font-family: $main-font
+        font-size: 14px
+        font-weight: 300
+        text-decoration: none
+        line-height: 25px
+        letter-spacing: 0.36px
+        margin-bottom: 5px
+        color: $main-color
+        transition: all .3s ease-in
+        &:hover
+          color: $accent-color
     &-bottom
+      display: flex
+      justify-content: space-between
+      align-items: center
+      margin-right: 60px
       .copyright
         font-size: 12px
         font-weight: 400
         letter-spacing: 0.6px
         margin-bottom: 0
         color: $dark-accent
+      .menu-footer-menu-container
+        .footer-nav
+          margin: 0
+          padding: 0
+          list-style: none
+          display: flex
+          .menu-item
+            &::after
+              content: '|'
+              display: inline-block
+              margin: 0 5px
+              color: $dark-accent
+            &:last-of-type
+              &::after
+                display: none
+            a
+              font-size: 12px
+              font-weight: 400
+              letter-spacing: 0.6px
+              text-decoration: none
+              margin-bottom: 0
+              transition: all .3s ease-in
+              color: $dark-accent
+              &:hover
+                color: $accent-color
   .footer-right
     padding-top: 75px
     padding-bottom: 60px
