--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -111,11 +111,13 @@
     .navbar
       padding: 40px 15px 30px
       background-color: transparent
-      transition: all 600ms ease-in-out
+      transition: all 300ms ease-in-out
       .navbar-collapse
           padding: 60px 0
       &.nav-open
         background-color: $dark-color
+        .navbar-toggler-icon
+          /*color: white*/
         .site-branding
           .site-logo
             svg
@@ -130,6 +132,7 @@
             path
               transition: all 600ms ease-in-out
     .navbar-nav
+      min-height: calc(100vh - 118px)
       .nav-link
         color: #DEE3E4
     .navbar-actions
@@ -178,3 +181,10 @@
           padding: 1.1rem 3rem 0.9rem !important
           margin-top: 1rem
           box-shadow: 0 1rem 3rem rgb(0 0 0 / 18%) !important
+
+  #main-header.sticky
+    .navbar
+      background-color: $bg-color
+      box-shadow: 0px -1px 4px 0px rgb(0 0 0 / 20%)
+      &.nav-open
+        background-color: $dark-color
