--- a/assets/sass/_layout/_homepage.sass
+++ b/assets/sass/_layout/_homepage.sass
@@ -45,12 +45,19 @@
 
 .section-form
   padding-top: 100px
-  padding-bottom: 40px
+  padding-bottom: 140px
   background-color: $main-color
   color: $text-color
   .section__subtitle
+    line-height: 44px
+    margin-bottom: 60px
     color: $text-color
-    margin-left: 0
+  .bg-logo
+    svg
+      opacity: .16
+      fill: $bg-color
+
+
 
 .section-blog
   padding-top: 100px
