--- a/assets/sass/_layout/_layout.sass
+++ b/assets/sass/_layout/_layout.sass
@@ -1,5 +1,7 @@
 @import "main-header"
+@import "_pages/pages"
+@import "_posts/posts"
+@import "_archives/archives"
 @import "_modules/modules"
 @import "sections"
-@import "homepage"
 @import "footer"
