--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -1,4 +1,6 @@
 .section
+  padding-top: 140px
+  padding-bottom: 100px
   &__title
     font-size: 13.33px
     font-weight: 400
@@ -22,6 +24,9 @@
     letter-spacing: 0.3982px
     margin-bottom: 40px
     color: $text-color
+  &__description
+    color: #496063
+    line-height: 30px
   &__btn
     font-family: $second-font
     font-weight: 300
