--- a/assets/sass/_layout/_pages/_page-starting-project.sass
+++ b/assets/sass/_layout/_pages/_page-starting-project.sass
@@ -2,9 +2,8 @@
     display: flex
     justify-content: center
     align-items: center
-    padding: 150px 0
+    padding: 200px 0 150px
     background: $main-color
-    background: linear-gradient(180deg, $main-color 1%, $bg-color 90%)
     color: $text-color
     .wpcf7
         .wpcf7-form
