--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -33,7 +33,7 @@
       .nav-link
         color: #DEE3E4
         &:hover
-          color: #445659
+          color: $main-color
 
 @include media-breakpoint-up(lg)
   #main-header
