--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -67,6 +67,9 @@
         padding: 0
         li
           display: inline-block
+          margin-right: 5px
+          &:last-of-type
+            margin-right: 0
           a
             font-family: $main-font
             font-weight: 300
@@ -99,3 +102,8 @@
       max-width: 100%
       height: auto
       object-fit: cover
+      margin-bottom: 40px
+      &:last-of-type
+        margin-bottom: 0
+        
+      
