--- a/assets/sass/_layout/_archives/_archive-blog.sass
+++ b/assets/sass/_layout/_archives/_archive-blog.sass
@@ -1,4 +1,4 @@
-.post-type-archive-projects
+.blog
   .section-intro
     padding-top: 200px
     padding-bottom: 20px
@@ -36,9 +36,6 @@
         color: $text-color
         &:last-of-type
           margin-right: 0
-        &:hover
-          border-color: $accent-color
-          color: $accent-color
       .is-checked
         border-color: $main-color
         color: $main-color
