--- a/assets/sass/_layout/_archives/_archive-case-studies.sass
+++ b/assets/sass/_layout/_archives/_archive-case-studies.sass
@@ -1,15 +1,20 @@
-.post-type-archive-projects
-  .section-intro
+.post-type-archive-case_studies
+  .main-content
+    background: rgb(0,204,204)
+    background: linear-gradient(0deg, rgba(0,204,204,1) 1%, rgba(18,35,43,1) 55%)
     padding-top: 200px
     padding-bottom: 20px
-    .section__title
-      &--wrapper
-        margin-bottom: 40px
+  .section-intro--dark
     .section__subtitle
-      font-size: 47.78px
-      letter-spacing: 0.9556px
-      line-height: 54px
-      margin-bottom: 70px
+      color: $bg-color
+  .section__title
+    &--wrapper
+      margin-bottom: 40px
+  .section__subtitle
+    font-size: 47.78px
+    letter-spacing: 0.9556px
+    line-height: 54px
+    margin-bottom: 70px
   .section-filter
     padding-top: 0
     padding-bottom: 0
@@ -18,7 +23,6 @@
       display: flex
       align-items: center
       flex-wrap: wrap
-      
       .button
         font-family: $main-font
         font-weight: 400
@@ -29,11 +33,11 @@
         padding: 10px 20px
         margin-bottom: 20px
         margin-right: 10px
-        border: 1px solid $text-color
+        border: 1px solid #799297
         border-radius: 30px
         background-color: transparent
         transition: all .3s ease-in
-        color: $text-color
+        color: #799297
         &:last-of-type
           margin-right: 0
         &:hover
