--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -18,6 +18,7 @@
       font-family: $main-font
       font-size: 16px
       font-weight: 300
+      line-height: 1
       color: #445659
       text-decoration: none
       &:hover
@@ -63,8 +64,8 @@
 
   #main-header.sticky
     .navbar
-      padding-top: 25px
-      padding-bottom: 30px
+      padding-top: 20px
+      padding-bottom: 20px
       background-color: $bg-color
       box-shadow: 0px -1px 4px 0px rgb(0 0 0 / 20%)
       .site-branding
