--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -6,6 +6,7 @@
         &-image
             position: absolute
             width: 100%
+            height: auto
             &::after
                 position: absolute
                 content:""
