--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -196,6 +196,7 @@
     .navbar-nav
       position: relative
       min-height: calc(100vh - 118px)
+      align-items: flex-end !important
       .nav-link
         color: $main-color
         text-align: right
