--- a/assets/sass/_layout/_modules/_testimonials.sass
+++ b/assets/sass/_layout/_modules/_testimonials.sass
@@ -46,3 +46,10 @@
       color: $text-color
       span
         font-weight: 600
+
+@include media-breakpoint-down(lg)
+  .testimonial-blockquote
+    &__content
+      p
+        font-size: 28.82px
+        line-height: 32px
