--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -44,3 +44,8 @@
       color: $accent-color
       svg
         fill: $accent-color
+
+@include media-breakpoint-down(lg)
+  .section
+    padding-top: 50px
+    padding-bottom: 30px
