--- a/assets/sass/_layout/_modules/_projects.sass
+++ b/assets/sass/_layout/_modules/_projects.sass
@@ -12,4 +12,12 @@
       margin-top: 170px
     &:nth-child(5)
       
-      
+@include media-breakpoint-down(lg)
+  .section-projects
+    padding-top: 50px
+    padding-bottom: 30px
+
+  .grid-projects
+    .grid-item
+      &:nth-child(3)
+        margin-top: 90px
