--- a/assets/sass/_layout/_modules/_services.sass
+++ b/assets/sass/_layout/_modules/_services.sass
@@ -3,3 +3,8 @@
   padding-bottom: 100px
   .section__subtitle
     margin-bottom: 80px
+
+@include media-breakpoint-down(lg)
+  .section-services
+    padding-top: 50px
+    padding-bottom: 30px
