--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -1,5 +1,3 @@
-
-
 /* text animation */
 @keyframes animated-text
   from
@@ -14,6 +12,12 @@
   to
     border-bottom-color: transparent
 
+.page-template-page-home
+  .section-intro
+    .section__subtitle
+      line-height: 44px
+      span
+        color: $main-color
 
 .section-hero
   display: flex
