--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -25,8 +25,15 @@
     margin-bottom: 40px
     color: $text-color
   &__description
-    color: #496063
+    font-family: $main-font
+    font-weight: 300
+    font-size: 16px
     line-height: 30px
+    color: $text-color
+    p
+      font-size: 16px
+      line-height: 30px
+      color: $text-color
   &__btn
     font-family: $second-font
     font-weight: 300
