--- a/assets/sass/_layout/_archives/_archive-services.sass
+++ b/assets/sass/_layout/_archives/_archive-services.sass
@@ -19,3 +19,12 @@
       line-height: 30px
   .section-services-list
     padding-top: 0
+
+@include media-breakpoint-down(lg)
+  .post-type-archive-services
+    .section-intro
+      height: auto
+      padding-top: 150px
+      .section__subtitle
+        font-size: 37.78px
+        line-height: 44px
