--- a/assets/sass/_components/_filter.sass
+++ b/assets/sass/_components/_filter.sass
@@ -44,3 +44,16 @@
       .is-checked
         border-color: $main-color
         color: $main-color
+
+@include media-breakpoint-down(lg)
+  .section-filter
+    .filter-button-group
+      .button
+        width: 48%
+        margin: 1%
+
+@include media-breakpoint-down(md)
+  .section-filter
+    .filter-button-group
+      .button
+        width: 100%
