--- a/assets/sass/_layout/_archives/_archive-case-studies.sass
+++ b/assets/sass/_layout/_archives/_archive-case-studies.sass
@@ -15,3 +15,14 @@
     letter-spacing: 0.9556px
     line-height: 54px
     margin-bottom: 70px
+  .section-case-studies
+    padding-top: 80px
+    .card-project
+      &__content
+        .related-services
+          li
+            color: $bg-color
+      &__title
+        h3
+          color: $bg-color
+      
