--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -1,7 +1,7 @@
 .projects-template-default
   .section-intro
     padding-top: 200px
-    padding-bottom: 20px
+    padding-bottom: 80px
     .section__title
       font-family: $main-font
       text-decoration: none
@@ -10,6 +10,8 @@
         color: $accent-color
       &--wrapper
         margin-bottom: 20px
+    .section__subtitle
+      margin-bottom: 0
     .section__btn--back
       line-height: 1
       &:hover
@@ -30,7 +32,7 @@
       object-fit: cover
   .section-content
     padding-top: 60px
-    padding-bottom: 160px
+    padding-bottom: 100px
     .project-details
       h2
         font-family: $second-font
