--- a/assets/sass/_layout/_posts/_single-case-studies.sass
+++ b/assets/sass/_layout/_posts/_single-case-studies.sass
@@ -29,7 +29,7 @@
     img
       width: 100%
       max-width: 100%
-      //height: auto
+      height: auto
       object-fit: cover
   .case-studies-details
     padding: 40px
