--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -28,7 +28,7 @@
     img
       width: 100%
       max-width: 100%
-      //height: auto
+      height: auto
       object-fit: cover
   .section-content
     padding-top: 60px
