--- a/assets/sass/_components/_breadcrumbs.sass
+++ b/assets/sass/_components/_breadcrumbs.sass
@@ -3,6 +3,7 @@
     #breadcrumbs
       margin-bottom: 0px
       color: $text-color
+      font-weight: 400
       span
         span > a
           text-decoration: none
