--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -5,18 +5,22 @@
     &__header
         &-image
             position: absolute
-            width: 100%
-            height: auto
-            &::after
-                position: absolute
-                content:""
-                height:100%
-                width:100%
-                top:0
-                left:0
-                background: linear-gradient(to bottom, rgba(255,0,0,0) 0%,rgba(255,0,0,0.65) 100%)
+            width: auto
+            min-width: 100vw
+            height: 100vh
     &__image-container
         position: relative
+        width: 100%
+        height: 100%
+        &::after
+            //background-image: linear-gradient(0,rgba(46,86,89,.5),rgba(46,86,89,.5))
+            background-image: linear-gradient(0,rgba(18,35,43,.85),rgba(18,35,43,.85))
+            content: ""
+            height: 100%
+            left: 0
+            position: absolute
+            top: 0
+            width: 100%
     &__container
         position: relative
         padding: 200px 0 150px
