--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -163,7 +163,7 @@
     text-decoration: none
     transition: all .3s ease-in
     margin-top: 15px
-    color: $text-color
+    color: $main-color
     svg
       margin-top: 10px
       margin-left: 10px
