--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -30,7 +30,7 @@
     font-size: 72px
     font-weight: bold
     line-height: 71px
-    color: $text-color
+    color: $dark-color
     span
       &:nth-child(1)
         color: $bg-color
