--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -13,7 +13,7 @@
       display: block
       width: 100%
       height: 1px
-      background-color: $main-color
+      background-color: $dark-color
     &--wrapper
       margin-bottom: 20px
   &__subtitle
