--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -5,7 +5,7 @@
         svg
           max-width: 40px
           height: auto
-          fill: $text-color
+          fill: $dark-color
     &__light, &__dark
       .site-branding
           .site-logo
@@ -19,7 +19,7 @@
       font-size: 16px
       font-weight: 400
       line-height: 1
-      color: #445659
+      color: $dark-color
       text-decoration: none
       &:hover
         color: #DEE3E4
