--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -55,6 +55,8 @@
 
 .card-project
   margin-bottom: 40px
+  > a
+    position: relative
   figure
     margin-bottom: 20px
     overflow: hidden
@@ -65,6 +67,14 @@
       object-fit: cover
       transform: scale(1)
       transition: all .3s ease-in
+    &:hover::after
+      background-image: linear-gradient(0,rgba(18,35,43,.85),rgba(18,35,43,.70))
+      content: ""
+      height: 100%
+      left: 0
+      position: absolute
+      top: 0
+      width: 100%
     &:hover
       img
         transform: scale(1.1)
