--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -1,5 +1,10 @@
-.section-about-intro
-    padding: 0
+.section
+    &-about-intro
+        padding: 0
+    &-about-team
+        padding-bottom: 0
+    &-st-kontakt
+        padding-top: 0
 
 .about
     &__header
