--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -34,6 +34,13 @@
       font-size: 14px
       line-height: 30px
       color: $text-color
+    &-contact
+      font-family: $main-font
+      font-weight: 300
+      font-size: 16px
+      line-height: 30px
+      color: $text-color
+      padding-right: 20%
   &__btn
     font-family: $second-font
     font-weight: 300
@@ -59,3 +66,6 @@
     &__title--wrapper
       .text-end
         width: 100%
+    &__description
+      &-contact
+        padding-right: 0
