--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -39,3 +39,17 @@
                 font-size: 16px
                 line-height: 30px
                 color: $bg-color
+
+.team
+    &__name
+        font-family: $second-font
+        font-weight: 300
+        font-size: 24px
+        line-height: 30px
+        color: $text-color
+    &__position
+        font-family: $main-font
+        font-weight: 300
+        font-size: 14px
+        line-height: 25px
+        color: $text-color
