--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -34,7 +34,7 @@
       font-size: 14px
       line-height: 30px
       color: $text-color
-    &-contact
+    &-contact, &-team
       font-family: $main-font
       font-weight: 300
       font-size: 16px
