--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -28,7 +28,7 @@
       .nav-link
         color: #445659
         &:hover
-          color: #DEE3E4
+          color: $main-color
   &__dark
     .menu-item
       .nav-link
