--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -1,4 +1,4 @@
-.services-template-default
+.services-template-default, .services-template-page-templates
   .section-intro
     display: flex
     justify-content: center
@@ -22,9 +22,27 @@
         font-size: 16px
         line-height: 30px
         color: $bg-color
+    &--light
+      background-color: #DEE3E4
+      .section__title
+        &--wrapper
+          margin-bottom: 40px
+        &--line
+          background-color: $dark-color
+      .section__subtitle
+        font-size: 47.78px
+        letter-spacing: 0.9556px
+        line-height: 54px
+        margin-bottom: 70px
+        color: $dark-color
+      .section__description
+        font-size: 16px
+        line-height: 30px
+        color: $dark-color
+
 
 @include media-breakpoint-down(lg)
-  .services-template-default
+  .services-template-default, .services-template-page-templates
     .section-intro
       height: auto
       padding-top: 150px
