--- a/assets/sass/_base-styles.sass
+++ b/assets/sass/_base-styles.sass
@@ -10,6 +10,10 @@ body
 .grecaptcha-badge
   visibility: hidden
 
+@include media-breakpoint-up(lg)
+  .container-short
+    max-width: 1100px
+
 @include media-breakpoint-down(lg)
  img
   max-width: 100%
