--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -82,6 +82,14 @@
       line-height: 30px
       color: $bg-color
       max-width: 85%
+  &-tiers
+    &__title
+      font-size: 40px
+      font-weight: 400
+      letter-spacing: 0.9556px
+      line-height: 64px
+      color: $text-color
+      margin-bottom: 65px
 
 
 @include media-breakpoint-down(lg)
