--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -120,7 +120,7 @@
       margin-left: 30px
       width: 120px
   &-websites
-    &__blocks
+    &-blocks
       padding-bottom: 0
     &__row
       padding-bottom: 140px
