--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -50,6 +50,9 @@
     text-decoration: none
     transition: all .3s ease-in
     color: $text-color
+    &-blocks
+      display: inline-block
+      margin-top: 50px
     svg
       margin-left: 5px
       transition: all .3s ease-in
@@ -69,3 +72,6 @@
     &__description
       &-contact
         padding-right: 0
+    &__btn
+      &-blocks
+        margin-top: 0
