--- a/assets/sass/_base-styles.sass
+++ b/assets/sass/_base-styles.sass
@@ -14,6 +14,9 @@ body
   .container-short
     max-width: 1100px
 
+  .container-starting-project
+    max-width: 860px
+
 @include media-breakpoint-down(lg)
  img
   max-width: 100%
