--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -64,6 +64,8 @@
         padding-bottom: 6px
         &:not(:first-child)
           padding-top: 6px
+  .section-projects
+    padding-top: 80px
 
 .section
   &-services
